styling cleaned up, deployed to heroku, sized down

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
-	<link href="https://fonts.googleapis.com/css?family=Comfortaa|Raleway|Oxygen+Mono|Cabin+Sketch|Pacifico|Sofia|Delius|Delius+Swash+Caps|Josefin+Sans:300,400,600,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Comfortaa|Delius+Swash+Caps" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
